# privacy-interfaces

./: .gitignore  .gitmodules  README.md  README_rgbdslam_v2  hat_of_darkness.launch  hat_of_visibility.launch  octomap_notes  run_demo.bash  run_pr2_demo.bash  specify_and_filter_zones.launch
Privacy Interface First Paper/: REmilysprivacyInterfaces.tex
ceiling_localizer/: CMakeLists.txt  package.xml
ceiling_localizer/scripts/: ceilingLocalizer.py
cmvision/.svn/: all-wcprops  entries
cmvision/launch/: hatfinder.launch
filtering/octomap_imagery/: CMakeLists.txt  octomap_notes
filtering/person_filter/: CMakeLists.txt  package.xml
filtering/plane_shaver/: package.xml
filtering/probability_filters/: CMakeLists.txt  setup.py
filtering/rgbd_edge_filters/: CMakeLists.txt  package.xml
filtering/text_filters/: package.xml
filtering/tunnel_vision/: package.xml
filtering/zone_filter/: CMakeLists.txt  package.xml
hat_detector/: CMakeLists.txt  DetectHatIn3D.py  package.xml
hat_detector/config/: green-hat.txt
hat_detector/launch/: hatfinder.launch
hat_detector/scripts/: DetectHatIn3D.py  is_hat_on_head.py
magic_tabletop/: package.xml
map_from_ceiling/: CMakeLists.txt  my_map2.yaml  package.xml
map_from_ceiling/images/: betterMap_edit.pgm  betterMap_edit.yaml
octomap_imagery/: CMakeLists.txt  README_INTERACTIVE_DEMO  octomap_notes  package.xml
octomap_imagery/scripts/: interactive_gaze_control.py
octomap_imagery/src/: clouds2Octomaps.cpp  downsample_clouds.cpp  octomap2Image.cpp  pcd2octree.cpp  redact_hatted_object.cpp  replace_foreground.cpp  replace_hatted_object.cpp  reprojectImage.cpp
person_filter/: CMakeLists.txt  README  package.xml
privacy/: package.xml
probability_filters/: CMakeLists.txt  PACKAGE_OUTLINE  fake_trajectory_0.pickle  package.xml
specifying/zone_server/: CMakeLists.txt  package.xml
specifying/zone_server/msg/: PrivacyZones.msg
specifying/zone_server/scripts/: zone_server.py  zone_server_node.py
specifying/zone_server/srv/: DeletePrivacyZone.srv  EditPrivacyZone.srv
text_filters/: CMakeLists.txt
(+180 files in other folders)
