<?xml version="1.0"?>
<package>
  <name>zone_server</name>
  <version>0.0.0</version>
  <description>This package is the central hub for using physical
markers to specify private objects and regions. It listens to
detectors, asks questions of the user, visualizes privacy zones, and
broadcasts to filters and the nav stack. </description>

  <maintainer email="ruebenm@onid.oregonstate.edu">Matthew Rueben</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>